--- a/serverless.yml
+++ b/serverless.yml
@@ -1,19 +1,6 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
 service: sls-progimage
 # app and org for use with dashboard.serverless.com
-app: sls-progimage
+app: progimage
 org: trevorobrien
 
 # You can pin your service to only deploy with a specific Serverless version
@@ -24,6 +11,16 @@ provider:
   name: aws
   runtime: nodejs10.x
   region: eu-west-1
+  stackName: sls-progimage
+  environment:
+    bucketName: ${self:custom.bucket}
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - s3:PutObject
+        - s3:GetObject
+      Resource:
+        - "arn:aws:s3:::${self:custom.bucket}/*"
 
 # you can overwrite defaults here
 #  stage: dev
@@ -59,8 +56,13 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  uploader:
+    handler: src/uploader.handler
+    events:
+      - http:
+          path: upload
+          method: post
+          cors: true
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
@@ -112,3 +114,7 @@ functions:
 #     NewOutput:
 #       Description: "Description for the output"
 #       Value: "Some output value"
+custom:
+  bucket: progimage
+plugins:
+  - serverless-offline
