--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Serverless Image Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.594.0",
+    "file-type": "^12.4.2",
     "mime": "^2.4.4",
     "mime-types": "^2.1.25",
     "sharp": "^0.23.4",
