--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless Image Project",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "test": "./node_modules/.bin/mocha test/*.js"
   },
   "author": "",
   "license": "ISC",
