Fix sharp node version issue

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Serverless Image Project",
   "main": "index.js",
   "scripts": {
+    "buildlocal": "rm -rf node_modules/sharp && npm install",
+    "buildsls": "rm -rf node_modules/sharp && npm install --arch=x64 --platform=linux sharp",
     "test": "./node_modules/.bin/mocha test/*.js"
   },
   "author": "",
@@ -23,6 +25,7 @@
     "serverless-apigw-binary": "^0.4.4",
     "serverless-apigwy-binary": "^1.0.0",
     "serverless-mocha-plugin": "^1.11.0",
-    "serverless-offline": "^5.12.1"
+    "serverless-offline": "^5.12.1",
+    "serverless-scriptable-plugin": "^1.0.5"
   }
 }
