--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Serverless Image Project",
   "main": "index.js",
   "scripts": {
+    "start": "sls offline --printOutput",
     "buildlocal": "rm -rf node_modules/sharp && npm install",
     "buildsls": "rm -rf node_modules/sharp && npm install --arch=x64 --platform=linux sharp",
-    "test": "./node_modules/.bin/mocha test/*.js"
+    "test": "sls invoke test"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "serverless-bundle": "^1.2.5",
     "serverless-mocha-plugin": "^1.11.0",
     "serverless-offline": "^5.12.1",
+    "serverless-plugin-optimize": "^4.1.3-rc.1",
     "serverless-scriptable-plugin": "^1.0.5"
   }
 }
