--- a/serverless.yml
+++ b/serverless.yml
@@ -12,6 +12,7 @@ provider:
   runtime: nodejs12.x
   region: eu-west-1
   stackName: sls-progimage
+  stage: ${opt:stage, 'dev'}
   environment:
     bucketName: ${self:custom.bucket}
     INVOKE_ENDPOINT: 'http://localhost:3000'
@@ -42,49 +43,11 @@ provider:
 
 package:
   individually: true
-  # exclude:
-  #   - node_modules/**
-  #   - '!node_modules/uuid/**'
-  #   - '!node_modules/babel-runtime/**'
-  #   - '!node_modules/sharp/**'
-  #   - '!node_modules/file-type/**'
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
-
-# you can add statements to the Lambda function's IAM Role here
-#  iamRoleStatements:
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:ListBucket"
-#      Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:PutObject"
-#      Resource:
-#        Fn::Join:
-#          - ""
-#          - - "arn:aws:s3:::"
-#            - "Ref" : "ServerlessDeploymentBucket"
-#            - "/*"
-
-# you can define service wide environment variables here
-#  environment:
-#    variable1: value1
-
-# you can add packaging information here
-#package:
-#  include:
-#    - include-me.js
-#    - include-me-dir/**
-#  exclude:
-#    - exclude-me.js
-#    - exclude-me-dir/**
-
 functions:
   uploader:
     handler: src/handlers/uploader.handler
     memorySize: 3008
+    timeout: 15
     events:
       - http:
           path: upload
@@ -93,6 +56,7 @@ functions:
   retriever:
     handler: src/handlers/retriever.handler
     memorySize: 3008
+    timeout: 15
     events:
       - http:
           path: retriever
@@ -101,61 +65,11 @@ functions:
   transformer:
     handler: src/handlers/transformer.handler
     memorySize: 3008
+    timeout: 15
     events:
       - http:
           path: transformer
           method: get
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - websocket: $connect
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-#      - alb:
-#          listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-#          priority: 1
-#          conditions:
-#            host: example.com
-#            path: /hello
-
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
 resources:
   Resources:
     StorageBucket:
