--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "DEBUG=* sls offline --printOutput",
     "buildlocal": "rm -rf node_modules/sharp && npm install",
     "buildsls": "rm -rf node_modules/sharp && npm install --arch=x64 --platform=linux sharp",
+    "pretest": "eslint --ignore-path .gitignore .",
     "test": "sls invoke test"
   },
   "author": "",
@@ -24,6 +25,10 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-strongloop": "^2.1.0",
+    "eslint-plugin-import": "^2.20.0",
     "lambda-tester": "^4.0.1",
     "mocha": "^6.2.2",
     "serverless-apigw-binary": "^0.4.4",
