--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "mocha": true
     },
     "extends": [
         "airbnb-base"
@@ -18,6 +19,7 @@
       "semi": [
           "error",
           "never"
-        ]
+        ],
+      "no-unused-expressions": ["error", {"allowTernary": true}]
     }
 }
