--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,7 @@
 service: sls-progimage
 # app and org for use with dashboard.serverless.com
 app: sls-progimage
-org: trevorobrien
+org: sls-progimage-org
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
